--- a/cliente.html
+++ b/cliente.html
@@ -33,7 +33,7 @@
                     <td>000.000.000-00</td>
                     <td>Jataí</td>
                     <td>(00) 0 0000-0000</td>
-                    <td><button class="update-btn">Atualizar</button></td>
+                    <td><a href="form_cliente.html" class="update-btn">Atualizar</a></td>
                 </tr>
                 
             </tbody>
