--- a/form_cliente.html
+++ b/form_cliente.html
@@ -15,26 +15,26 @@
         <form class="row g-3" action="" method="get">
             <div class="col-md-6">
                 <label for="exampleFormControlInput1" class="form-label">Nome</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nome" required>
+                <input class="form-control" id="exampleFormControlInput1" placeholder="Nome" required>
             </div>
             <div class="col-md-6">
                 <label for="exampleFormControlInput1" class="form-label">Telefone</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="(00) 0 0000-0000" required>
+                <input class="form-control" id="exampleFormControlInput1" placeholder="(00) 0 0000-0000" required>
             </div>
             <div class="col-md-12">
                 <label for="exampleFormControlInput1" class="form-label">Endereço</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Endereço" required>
+                <input class="form-control" id="exampleFormControlInput1" placeholder="Endereço" required>
             </div>
             <div class="col-md-6">
                 <label for="exampleFormControlInput1" class="form-label">CPF</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="000.000.000-00" required>
+                <input class="form-control" id="exampleFormControlInput1" placeholder="000.000.000-00" required>
             </div>
             <div class="col-md-6">
                 <label for="exampleFormControlInput1" class="form-label">Cidade</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Cidade" required>
+                <input class="form-control" id="exampleFormControlInput1" placeholder="Cidade" required>
             </div>
             <div>
-                <a href="cliente.html" type="button" class="btn btn-primary">Voltar</a>
+                <a onclick="window.history.back();" type="button" class="btn btn-primary">Voltar</a>
                 <button type="submit" class="btn btn-primary">Cadastrar</button>
             </div>
         </form>
