fix html bugs and inputs

--- a/form_mecanico.html
+++ b/form_mecanico.html
@@ -15,23 +15,23 @@
         <form class="row g-3" action="" method="get">
             <div class="col-md-6">
                 <label for="exampleFormControlInput1" class="form-label">Nome</label>
-                <input class="form-control" id="exampleFormControlInput1" placeholder="Nome" required>
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nome" required>
             </div>
             <div class="col-md-6">
                 <label for="exampleFormControlInput1" class="form-label">Telefone</label>
-                <input class="form-control" id="exampleFormControlInput1" placeholder="(00) 0 0000-0000" required>
+                <input type="tel" class="form-control" id="exampleFormControlInput1" placeholder="11900000000" pattern="[0-9]{11}">
             </div>
             <div class="col-md-12">
                 <label for="exampleFormControlInput1" class="form-label">Endereço</label>
-                <input class="form-control" id="exampleFormControlInput1" placeholder="Endereço" required>
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Endereço" required>
             </div>
             <div class="col-md-6">
                 <label for="exampleFormControlInput1" class="form-label">CPF</label>
-                <input class="form-control" id="exampleFormControlInput1" placeholder="000.000.000-00" required>
+                <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="000.000.000-00" required>
             </div>
             <div class="col-md-6">
                 <label for="exampleFormControlInput1" class="form-label">Cidade</label>
-                <input class="form-control" id="exampleFormControlInput1" placeholder="Cidade" required>
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Cidade" required>
             </div>
             <div>
                 <a onclick="window.history.back();" type="button" class="btn btn-primary">Voltar</a>
