--- a/form_peca.html
+++ b/form_peca.html
@@ -15,7 +15,7 @@
         <form class="row g-3" action="" method="get">
             <div class="col-md-12">
                 <label for="exampleFormControlInput1" class="form-label">Descrição</label>
-                <input class="form-control" id="exampleFormControlInput1" placeholder="Descrição" required>
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Descrição" required>
             </div>
             <div class="col-md-6">
                 <label for="exampleFormControlInput1" class="form-label">Marca</label>
@@ -34,7 +34,7 @@
             </div>
             <div>
                 <a onclick="window.history.back();" type="button" class="btn btn-primary">Voltar</a>
-                <button type="submit" class="btn btn-primary">Cadastrar</button>
+                <input type="submit" class="btn btn-primary">Cadastrar</input>
             </div>
         </form>
 
