--- a/form_serviço.html
+++ b/form_serviço.html
@@ -15,12 +15,12 @@
         <form class="row g-3" action="" method="get">
             <div class="col-md-6">
                 <label for="exampleFormControlInput1" class="form-label">Descrição</label>
-                <input class="form-control" id="exampleFormControlInput1" placeholder="Descrição" required>
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Descrição" required>
             </div>
             <label class="form-label">Preço</label>
             <div class="input-group mb-1">   
                 <span class="input-group-text">R$</span>
-                <input class="form-control" id="exampleFormControlInput1" placeholder="00,00" style="flex: none; width: 100px;">
+                <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="00,00" style="flex: none; width: 100px;">
             </div>
             <div>
                 <a onclick="window.history.back();" type="button" class="btn btn-primary">Voltar</a>
