--- a/form_cliente.html
+++ b/form_cliente.html
@@ -5,36 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cliente</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="scripts.js"></script>
+
 </head>
 <body>
     <div id="menu-container"></div>
     
     <h1 style="display:flex; padding-top: 40px; justify-content: center; align-items: center;">Cadastro de Cliente</h1>
     <div style="display: flex; justify-content: center;">
-        <form class="row g-3" action="" method="get">
+        <form id="form-cliente" class="row g-3">
             <div class="col-md-6">
-                <label for="exampleFormControlInput1" class="form-label">Nome</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nome" required>
+                <label for="nome" class="form-label">Nome</label>
+                <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome" required>
             </div>
             <div class="col-md-6">
-                <label for="exampleFormControlInput1" class="form-label">Telefone</label>
-                <input type="tel" class="form-control" id="exampleFormControlInput1" placeholder="(11)900000000" pattern="[0-9]{11}" required>
+                <label for="telefone" class="form-label">Telefone</label>
+                <input type="tel" class="form-control" id="telefone" name="telefone" placeholder="(11)900000000" pattern="[0-9]{11}" required>
             </div>
             <div class="col-md-12">
-                <label for="exampleFormControlInput1" class="form-label">Endereço</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Endereço" required>
+                <label for="endereço" class="form-label">Endereço</label>
+                <input type="text" class="form-control" id="endereço" name="endereco" placeholder="Endereço" required>
             </div>
             <div class="col-md-6">
-                <label for="exampleFormControlInput1" class="form-label">CPF</label>
-                <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="000.000.000-00" required>
+                <label for="cpf" class="form-label">CPF</label>
+                <input type="number" class="form-control" id="cpf" name="cpf" placeholder="000.000.000-00" required>
             </div>
             <div class="col-md-6">
-                <label for="exampleFormControlInput1" class="form-label">Cidade</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Cidade" required>
+                <label for="cidade" class="form-label">Cidade</label>
+                <input type="text" class="form-control" id="cidade" name="cidade" placeholder="Cidade" required>
             </div>
             <div>
-                <a onclick="window.history.back();" type="button" class="btn btn-primary">Voltar</a>
+                <a href="cliente.html" type="button" class="btn btn-primary">Voltar</a>
                 <button type="submit" class="btn btn-primary">Cadastrar</button>
             </div>
         </form>
