--- a/mecanico.html
+++ b/mecanico.html
@@ -1,52 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mecânico</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="scripts.js" defer></script>
 
 </head>
+
 <body>
     <div id="menu-container"></div>
 
     <h1 style="display:flex; padding-top: 40px; justify-content: center; align-items: center;">Mecânicos</h1>
 
     <div class="container" style="padding-top: 60px; overflow: auto; ">
-        <div style="display: flex; justify-content: end;">
-            <input class="form-control me-2" type="search" placeholder="Procurar" aria-label="Search" style="width: auto;">
-            <button class="btn btn-outline-success" type="submit">Procurar</button>
-        </div>
+        <form style="display: flex; justify-content: end;">
+            <input class="form-control me-2" type="search" placeholder="Procurar" aria-label="Search"
+                style="width: auto;">
+            <input class="btn btn-outline-success" type="submit"></input>
+        </form>
         <div class="row align-items-start">
-        <table>
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Nome</th>
-                    <th>CPF</th>
-                    <th>Cidade</th>
-                    <th>Telefone</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>João</td>
-                    <td>000.000.000-00</td>
-                    <td>Jataí</td>
-                    <td>(00) 0 0000-0000</td>
-                    <td><a href="form_mecanico.html" class="btn btn-primary">Atualizar</a>
-                        <button type="button" class="btn btn-danger">Deletar</button>
-                    </td>
-                </tr>
-                
-            </tbody>
-        </table>
-    </div>
-    <div>
-      <a href="form_mecanico.html" class="btn btn-primary" role="button">Cadastrar</a>  
-    </div>
+            <table id="mecanico-table">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nome</th>
+                        <th>CPF</th>
+                        <th>Telefone</th>
+                        <th>Cidade</th>
+                        <th>Endereço</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Carregando...</td>
+                        <td>Carregando...</td>
+                        <td>Carregando...</td>
+                        <td>Carregando...</td>
+                        <td>Carregando...</td>
+                        <td>Carregando...</td>
+                    </tr>
 
-    <script src="navbar.js"></script>
+                </tbody>
+            </table>
+        </div>
+        <div>
+            <a href="form_mecanico.html" class="btn btn-primary" role="button">Cadastrar</a>
+        </div>
+
+        <script src="navbar.js"></script>
 </body>
+
 </html>
