--- a/Servico.html
+++ b/Servico.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serviço</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="scripts.js" defer></script>
+    
 </head>
 <body>
     <div id="menu-container"></div>
@@ -18,7 +22,7 @@
             <button class="btn btn-outline-success" type="submit">Procurar</button>
         </div>
         <div class="row align-items-start">
-        <table>
+        <table id="servico-table">
             <thead>
                 <tr>
                     <th>ID</th>
@@ -28,12 +32,9 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>1</td>
-                    <td>Troca de Óleo</td>
-                    <td>R$ 60,00</td>
-                    <td><a href="form_cliente.html" class="btn btn-primary">Atualizar</a>
-                        <button type="button" class="btn btn-danger">Deletar</button>
-                    </td>
+                    <td>Carregando...</td>
+                    <td>Carregando...</td>
+                    <td>Carregando...</td>
                 </tr>
                 
             </tbody>
