--- a/form_serviço.html
+++ b/form_serviço.html
@@ -5,25 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Serviço</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="scripts.js" defer></script>
 </head>
 <body>
     <div id="menu-container"></div>
     
     <h1 style="display:flex; padding-top: 40px; justify-content: center; align-items: center;">Cadastro de Serviço</h1>
     <div style="display: flex; justify-content: center;">
-        <form class="row g-3" action="" method="get">
+        <form class="row g-3" id="form-servico">
             <div class="col-md-6">
-                <label for="exampleFormControlInput1" class="form-label">Descrição</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Descrição" required>
+                <label for="Descrição" class="form-label">Descrição</label>
+                <input type="text" class="form-control" id="descricao" name="descricaoServico" placeholder="Descrição" required>
             </div>
             <label class="form-label">Preço</label>
             <div class="input-group mb-1">   
                 <span class="input-group-text">R$</span>
-                <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="00,00" style="flex: none; width: 100px;">
+                <input type="number" class="form-control" id="preco" name="valorServico" placeholder="00,00" style="flex: none; width: 100px;">
             </div>
             <div>
-                <a onclick="window.history.back();" type="button" class="btn btn-primary">Voltar</a>
+                <a href="Servico.html" type="button" class="btn btn-primary">Voltar</a>
                 <button type="submit" class="btn btn-primary">Cadastrar</button>
             </div>
         </form>
