--- a/veiculo.html
+++ b/veiculo.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veículo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="scripts.js" defer></script>
 </head>
 <body>
     <div id="menu-container"></div>
@@ -17,7 +21,7 @@
             <button class="btn btn-outline-success" type="submit">Procurar</button>
         </div>
         <div class="row align-items-start">
-        <table>
+        <table id="veiculo-table">
             <thead>
                 <tr>
                     <th>ID</th>
@@ -29,14 +33,11 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>1</td>
-                    <td>João</td>
-                    <td>Ferrari</td>
-                    <td>FGU8-E3BM</td>
-                    <td>2024</td>
-                    <td><a href="form_veiculo.html" class="btn btn-primary">Atualizar</a>
-                        <button type="button" class="btn btn-danger">Deletar</button>
-                    </td>
+                    <td>Carregando...</td>
+                    <td>Carregando...</td>
+                    <td>Carregando...</td>
+                    <td>Carregando...</td>
+                    <td>Carregando...</td>
                 </tr>
                 
             </tbody>
